# pyfunnel

./: README.md  darn_good_style.mplstyle  pyproject.toml
src/pyfunnel/: __init__.py  funnel.py  generate_data.py
