[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "pyfunnel"
version = "0.0.1"
authors = [
  { name="Tyler Fach", email="tylerfach@gmail.com" },
]
description = "Tools for modelling a funnel"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies=[
   'polars',
   'matplotlib',
   'scipy',
   'numpy'
]
[project.urls]
Homepage = "https://github.com/tylerfach/pyfunnel"
